--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_homepage.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_homepage.xml
@@ -12,111 +12,121 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="-28dp"
-            app:cardCornerRadius="29dp"
-             app:cardBackgroundColor="#133464"
-            app:cardUseCompatPadding="false">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="40px"
+            android:layout_marginTop="75px"
+            android:layout_marginBottom="40px">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/circle_color_bg"
+                android:layout_marginEnd="8dp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingHorizontal="26dp"
-                android:paddingVertical="22dp">
-
-                <View
-                    android:layout_width="48dp"
-                    android:layout_height="40dp"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:background="@drawable/circle_background"
-                        android:layout_marginEnd="8dp" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Hello There!"
-                            android:textSize="20sp"
-                            android:textStyle="bold"
-                            android:textColor="#FFFFFF" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Welcome to Tourio"
-                            android:textSize="14sp"
-                            android:textColor="#DDDDDD" />
-                    </LinearLayout>
-
-                    <ImageView
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:src="@drawable/ic_notification"/>
-                </LinearLayout>
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Explore Your Dream!"
-                    android:textSize="22sp"
-                    android:lineHeight="30dp"
+                    android:text="Hello There!"
+                    android:textSize="20sp"
                     android:textStyle="bold"
-                    android:textColor="#FFFFFF"
-                    android:layout_marginTop="16dp" />
+                    android:textColor="#1F1F1F" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Welcome to Tourio"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:textColor="#8E8E8E" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_notification" />
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginHorizontal="50px"
+            app:cardCornerRadius="22dp"
+            app:cardUseCompatPadding="false">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/img_cover_03"
+                android:scaleType="centerCrop"
+                android:contentDescription="Background"
+                android:adjustViewBounds="true"
+                android:clipToOutline="true" />
+
+                <!-- Content Layer -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginTop="16dp">
+                    android:orientation="vertical"
+                    android:paddingHorizontal="26dp"
+                    android:paddingVertical="15dp">
 
-                    <EditText
+                    <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/shape_rounded_edittext"
-                        android:hint="Search"
-                        android:inputType="text"
-                        android:importantForAutofill="no"
-                        android:textSize="15dp"
-                        android:padding="12dp"
-                        android:textColor="#000000"
-                        android:textColorHint="#888888"
-                        android:layout_marginEnd="8dp" />
+                        android:layout_height="wrap_content"
+                        android:text="Explore, Plan &amp; Experience!"
+                        android:textSize="20sp"
+                        android:lineHeight="30dp"
+                        android:textStyle="bold"
+                        android:textColor="#FFFFFF"
+                        android:layout_marginTop="16dp" />
 
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_search"
-                        android:background="@drawable/shape_rounded_button"
-                        android:padding="8dp"
-                        app:tint="@color/app_primary_color" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:layout_marginTop="16dp">
+
+                        <EditText
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/shape_rounded_edittext"
+                            android:hint="Search"
+                            android:inputType="text"
+                            android:importantForAutofill="no"
+                            android:textSize="15dp"
+                            android:padding="12dp"
+                            android:textColor="#000000"
+                            android:textColorHint="#888888"
+                            android:layout_marginEnd="8dp" />
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@drawable/ic_search"
+                            android:background="@drawable/shape_rounded_button"
+                            android:padding="8dp"
+                            app:tint="@color/app_primary_color" />
+                    </LinearLayout>
                 </LinearLayout>
-
-
-            </LinearLayout>
-
+            </FrameLayout>
         </androidx.cardview.widget.CardView>
+
 
         <LinearLayout
             android:layout_width="match_parent"
