--- a/frontend/tourio/src/components/header.css
+++ b/frontend/tourio/src/components/header.css
@@ -4,12 +4,12 @@
     box-sizing: border-box;
   }
   
-  .header {
+  .main-header {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 140px;
+    padding: 30px 140px;
     background: white;
     border-radius: 12px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
@@ -24,12 +24,12 @@
     height: 40px;
   }
   
-  .tab-bar {
+  .header-tab-bar {
     display: flex;
     gap: 24px;
   }
   
-  .tab {
+  .header-tab {
     font-size: 16px;
     color: #888;
     cursor: pointer;
@@ -38,12 +38,12 @@
     position: relative;
   }
   
-  .tab.active {
+  .header-tab.active {
     color: black;
     font-weight: bold;
   }
   
-  .tab.active::after {
+  .header-tab.active::after {
     content: "";
     width: 100%;
     height: 4px;
