--- a/frontend/tourio/src/pages/addtourrequestpage/addtourrequestpage.css
+++ b/frontend/tourio/src/pages/addtourrequestpage/addtourrequestpage.css
@@ -55,7 +55,7 @@ body {
 }
 
 .tour-form button {
-  background-color: #007aff;
+  background-color: #073e79;
   color: white;
   font-size: 16px;
   padding: 12px;
