--- a/frontend/tourio/src/pages/loginpage/loginpage.css
+++ b/frontend/tourio/src/pages/loginpage/loginpage.css
@@ -13,16 +13,14 @@ body {
 }
 
 .signup-container {
+  
   display: flex;
   justify-content: center;
-  align-items: center;
   min-height: 100vh;
-  padding: 20px;
 }
 
 .signup-wrapper {
   width: 100%;
-  max-width: 1100px;
   background-color: rgb(255, 255, 255);
   border-radius: 12px;
   overflow: hidden;
@@ -35,10 +33,10 @@ body {
 }
 
 .signup-form {
+  padding: 0px 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-right: 100px;
 }
 
 .signup-header {
