--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/ongoingtour_destination_item.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/ongoingtour_destination_item.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="24dp"
     android:gravity="center_vertical">
 
     <!-- Left Side: Vertical Progress Bar -->
@@ -16,7 +15,7 @@
         <View
             android:id="@+id/lineAbove"
             android:layout_width="4dp"
-            android:layout_height="20dp"
+            android:layout_height="32dp"
             android:background="#CCCCCC" />
 
         <View
@@ -29,7 +28,7 @@
         <View
             android:id="@+id/lineBelow"
             android:layout_width="4dp"
-            android:layout_height="20dp"
+            android:layout_height="32dp"
             android:background="#CCCCCC" />
     </LinearLayout>
 
@@ -54,17 +53,29 @@
             android:id="@+id/destinationNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Destination Number"
+            android:text="LatLongs"
             android:textSize="14sp"
             android:textColor="#000000" />
-
-        <TextView
-            android:id="@+id/statusText"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Visit Status"
-            android:textSize="13sp"
-            android:textColor="#000000"
-            android:layout_marginTop="4dp" />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/statusTextLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Destination Status: "
+                android:textSize="13sp"
+                android:textColor="#000000"
+                android:layout_marginTop="4dp" />
+            <TextView
+                android:id="@+id/statusText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Visit Status"
+                android:textSize="13sp"
+                android:textColor="#000000"
+                android:layout_marginTop="4dp" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
