--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_hoteldashboard.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_hoteldashboard.xml
@@ -32,7 +32,7 @@
         <LinearLayout
             android:id="@+id/profileBox"
             android:layout_width="0dp"
-            android:layout_height="180dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:gravity="center"
@@ -41,8 +41,8 @@
             android:elevation="4dp">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/ic_profile"
                 android:layout_marginBottom="8dp"/>
 
@@ -59,7 +59,7 @@
         <LinearLayout
             android:id="@+id/yourToursBox"
             android:layout_width="0dp"
-            android:layout_height="180dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:gravity="center"
@@ -68,8 +68,8 @@
             android:elevation="4dp">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/travel"
                 android:layout_marginBottom="8dp"/>
 
@@ -96,7 +96,7 @@
         <LinearLayout
             android:id="@+id/hotelTourBookings"
             android:layout_width="0dp"
-            android:layout_height="180dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:gravity="center"
@@ -105,8 +105,8 @@
             android:elevation="4dp">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/request_travel"
                 android:layout_marginBottom="8dp"/>
 
@@ -123,7 +123,7 @@
         <LinearLayout
             android:id="@+id/viewHomeBox"
             android:layout_width="0dp"
-            android:layout_height="180dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:gravity="center"
@@ -134,7 +134,7 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/ic_add"
+                android:src="@drawable/ic_add_black"
                 android:layout_marginBottom="8dp"/>
 
             <TextView
@@ -145,6 +145,31 @@
                 android:gravity="center"/>
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/hotelOngoingToursBox"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_margin="8dp"
+        android:background="@drawable/shape_rounded_edittext"
+        android:elevation="4dp">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_car"
+            android:layout_marginBottom="8dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ongoing Tours"
+            android:textSize="14sp"
+            android:gravity="center"/>
 
     </LinearLayout>
 
